--- a/.github/workflows/elasticsearch.yml
+++ b/.github/workflows/elasticsearch.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   run-action:
     name: Start Elasticsearch
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         elasticsearch: ["6.4.3", "7.6.2"]
